Finalise Mini-Catan with correct ruleset

--- a/mini_catan/Ruleset.ipynb
+++ b/mini_catan/Ruleset.ipynb
@@ -23,51 +23,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2 Player Mini Catan**\n",
+    "**Mini-Catan Ruleset**\n",
     "\n",
-    "Winning Conditions\n",
-    "- 5 VP (WIN)\n",
-    "- Settlements = 1 VP\n",
-    "- Longest Road = 1 VP\n",
-    "- Tie Breakers (In case no more settlement and road spots)\n",
-    "  - Player with Longest Road wins\n",
-    "  - Player with more resources wins\n",
+    "  Winning Conditions\n",
+    "  - 5 VP (WIN)\n",
+    "  - Settlements = 1 VP\n",
+    "  - Longest Road = 1 VP \n",
+    "  - Tie Breakers (In case no more settlement and road spots)\n",
+    "  - - Player with more resources wins\n",
+    "  - - Player with Longest Road wins \n",
+    "  Inventory\n",
+    "  - 5 settlements max per player (no cities)\n",
+    "  - 10 roads per max player\n",
+    "  - 1 card for each resource adjacent to the second settlement at the start of the game\n",
     "\n",
-    "Inventory\n",
-    "- 4 settlements max per player (no cities)\n",
-    "- 4 roads per max player\n",
-    "- 1 card for each resource adjacent to the first settlement at the start of the game\n",
+    "  Basic Game Rules\n",
+    "  - Place 2 settlements and 2 roads in start\n",
+    "  - All settlement must have 2 roads (edges) of space between them\n",
+    "  - Use 1 six-sided die for rolls\n",
+    "  - Road : 1 Wood + 1 Brick\n",
+    "  - Settlement : 1 Wood + 1 Brick + 1 Wheat + 1 Sheep\n",
+    "  - Discard lower bound half of resource cards if 6 is rolled\n",
     "\n",
-    "Basic Game Rules\n",
-    "- Place 2 settlements and 2 roads in start\n",
-    "- All settlement must have 2 roads (edges) of space between them\n",
-    "- Use 1 six-sided die for rolls\n",
-    "- Road : 1 Wood + 1 Brick\n",
-    "- Settlement : 1 Wood + 1 Brick + 1 Wheat + 1 Sheep\n",
-    "- Discard lower bound half of resource cards if >= 6 if 6 is rolled\n",
+    "  Resources\n",
+    "  - Wood\n",
+    "  - Brick\n",
+    "  - Wheat\n",
+    "  - Sheep\n",
+    "  - Desert (no resources) + Robber\n",
     "\n",
-    "Resources\n",
-    "- 1 - Wood\n",
-    "- 2 - Brick\n",
-    "- 3 - Wheat\n",
-    "- 4 - Sheep\n",
-    "- 5 - Desert (no resources) + Robber\n",
+    "  Robber (roll a 6)\n",
+    "  - Initially at Desert\n",
+    "  - Robber Moves using another dice roll (where 6 means back to desert)\n",
+    "  - Said Hex stops producing resources for the settlement(s) adjacent to it\n",
+    "  - Discard upper bound half of resource cards of all players\n",
     "\n",
-    "Robber (roll a 6)\n",
-    "- Initially at Desert\n",
-    "- Robber Moves using another dice roll (where 6 means back to desert)\n",
-    "- Said Hex stops producing resources for the settlement(s) adjacent to it\n",
-    "- Player who rolled 6 steals one random resource if other player has settlement adjacent to hex (unless on desert)\n",
-    "\n",
-    "Turn Order\n",
-    "- Resource Phase : Roll the die for resource collection (only settlements adjacent to the hex with the rolled number receive resources)\n",
-    "- Trade Phase : May trade with other player or Bank at 3:1 Ratio\n",
-    "- Building Phase : May spend resources to build settlement or road\n",
-    "\n",
-    "Longest Road\n",
-    "- Awarded to the player with the longest continuous road (minimum 3 road segments)\n",
-    "- Provides 1 VP\n",
-    "- Can switch between players if a longer road is built"
+    "  Turn Order\n",
+    "   - Resource Phase : Roll the die for resource collection (only settlements adjacent to the hex with the rolled number receive resources)\n",
+    "   - Trade Phase : May trade with other player or Bank at 2:1 Ratio\n",
+    "   - Building Phase : May spend resources to build settlement or road\n",
+    "  \n",
+    "  Longest Road \n",
+    "   - Awarded to the player with the longest continuous road (minimum 4 road segments)\n",
+    "   - Provides 1 VP\n",
+    "   - Can switch between players if a longer road is built\n"
    ]
   },
   {
@@ -76,23 +75,14 @@
    "source": [
     "**State Space**\n",
     "\n",
-    "Player\n",
-    "- Total Resources\n",
-    "- Victory Points (VP)\n",
-    "- Settlement Placement\n",
-    "- Road Placement\n",
-    "- Has Longest Road\n",
-    "\n",
-    "Game Board\n",
-    "- Hex Configuration\n",
-    "- Robber Location\n",
-    "- Active Dice Roll\n",
-    "- Settlement locations\n",
-    "- Road locations\n",
-    "\n",
-    "Turn State\n",
-    "- Current Player\n",
-    "- Turn Phase - {Resource, Trade, Building}"
+    " - Resources for each player\n",
+    " - Victory Points of each player\n",
+    " - Settlement Placement\n",
+    " - Road Placement\n",
+    " - Longest Road\n",
+    " - Tile Numbers\n",
+    " - Tile Biome\n",
+    " - Robber Location\n"
    ]
   },
   {
@@ -101,29 +91,17 @@
    "source": [
     "**Action Space**\n",
     "\n",
-    "Game Start\n",
-    "- Place Settlement 1\n",
-    "- Place Road 1\n",
-    "- Place Settlement 2 - recieve initial resources\n",
-    "- Place Road 2\n",
-    "\n",
-    "N-th Resource Phase (for Dice < 6)\n",
-    "- All player recieve resources if applicable - (World action)\n",
-    "\n",
-    "N-th Resource Phase (for Dice = 6)\n",
-    "- Robber Moves to Y-th Hex (Dice Roll) - (World action) - May replace with freedom to choose Hex\n",
-    "- Player gets Random Card from other Player - (World action)\n",
-    "- Robber Blocks Resource from Hex - (World action)\n",
-    "- Choose cards to discard if over 6 cards\n",
-    "\n",
-    "N-th Trade Phase\n",
-    "- Trade with other Player \n",
-    "- Trade with Bank (at 3:1 Ratio)\n",
-    "- Do nothing\n",
-    "\n",
-    "N-th Building Phase\n",
-    "- Spend 1 Wood + 1 Brick to make and place Road\n",
-    "- Spend 1 Wood + 1 Brick + 1 Wheat + 1 Sheep to make and place Road"
+    " - Build Road\n",
+    " - Build Settlement\n",
+    " - Trade with Player\n",
+    " -  - Offer\n",
+    " -  - Request\n",
+    " -  - Other Player Response\n",
+    " -  - Response to Counter Offer\n",
+    " - Trade with Bank\n",
+    " -  - Offer\n",
+    " -  - Request\n",
+    " - End Turn"
    ]
   }
  ],
